# selenium-example

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
moodlewithselenium/: main.py
